test app: pruebo rutas

--- a/docker-compose.yt.yml
+++ b/docker-compose.yt.yml
@@ -4,4 +4,6 @@ services:
   youtube:
     image: js/youtube
     volumes:
+      - ./app/:/home/youtube/app/
       - .volumes/shared:/home/youtube/shared/
+      - /home/youtube/app/node_modules
